log
Wed 19 Apr 2023 01:48:31 AM UTC: 
 tests:  0|6
total_score: 0/70
66da31f
Wed 19 Apr 2023 01:58:11 AM UTC: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:3: error: expected ‘,’ or ‘;’ before ‘while’
   45 |   while(1)
      |   ^~~~~
hashmap.c:44:6: error: unused variable ‘codigo’ [-Werror=unused-variable]
   44 | long codigo = hash(key, map->capacity)
      |      ^~~~~~
hashmap.c: In function ‘createMap’:
hashmap.c:63:17: error: expected ‘;’ before ‘mapa’
   63 |   mapa->size = 0
      |                 ^
      |                 ;
   64 |   mapa->capacity = capacity;
      |   ~~~~           
cc1: all warnings being treated as errors
Compilation failed
ee21b58
